# mcp-server-requests

./: .gitignore  LICENSE  README-zh.md  README.md  pyproject.toml
mcp_server_requests/: __main__.py  request.py  test_request.py  utils.py  version.py
mcp_server_requests/ua/: __init__.py  ua.jsonl
